# dawdle-todo

./: CMakeLists.txt
dawdle-todo-backend/: .gitignore  Cargo.toml
dawdle-todo-backend/src/: configurations.rs  lib.rs  main.rs  modifiers.rs  task.rs
src/: main.cpp
ui/: main_window.slint  title_bar.slint  todo_group.slint
