[package]
name = "dawdle-todo-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.37"
clap = "4.5.4"
dirs = "5.0.1"
lazy-init = "0.5.1"
lazy_static = "1.4.0"
piccolo = "0.3.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[lib]
name = "dawdle_todo_backend"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "dawdle_todo_cli"
path = "src/main.rs"
